# diagram-autobuild

./: MANIFEST.in  README.md  entry_points.cfg  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
diagram_autobuild/: tool.py  util.py  view.py
diagram_autobuild/cmd/: diagram_autobuild_cmd.py
diagram_autobuild/templates/: index.html
diagram_autobuild/test/: test_tool.py  test_util.py  test_view.py
