[metadata]
name = diagram-autobuild
version = attr:diagram_autobuild.version
author = momijiame
author_email = amedama.ginmokusei@gmail.com
description = diagram-autobuild improves the efficiency of the making diagrams
long_description = file:README.md
url = https://github.com/momijiame/diagram-autobuild
license = Apache License, Version 2.0
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
install_requires =
    click
    future
    Jinja2
    livereload
zip_safe = False
include_package_data = True
packages = find:
entry_points = file:entry_points.cfg

[options.extras_require]
testing =
    pytest
    pytest-pep8

[options.packages.find]
exclude =
    test

[wheel]
universal = 1
